src/analyzer.output
Grammaire

    0 $accept: functions $end

    1 functions: ε
    2          | function functions

    3 $@1: ε

    4 $@2: ε

    5 function: type tID tLPAR $@1 params tRPAR $@2 block

    6 type: tINT
    7     | tVOID

    8 params: params_void
    9       | params_full

   10 params_void: ε
   11            | tVOID

   12 params_full: tINT tID

   13 $@3: ε

   14 params_full: tINT tID tCOMMA $@3 params_full

   15 $@4: ε

   16 block: tLBRACE $@4 instructions tRBRACE

   17 instructions: ε
   18             | instruction instructions

   19 instruction: print tSEMI
   20            | assign tSEMI
   21            | declar tSEMI
   22            | funcreturn tSEMI
   23            | funccall tSEMI
   24            | loop
   25            | condins
   26            | block
   27            | tSEMI

   28 $@5: ε

   29 ifheader: tIF tLPAR condition tRPAR $@5 block

   30 condins: ifheader

   31 $@6: ε

   32 condins: ifheader tELSE $@6 block

   33 expr: term
   34     | expr tADD expr
   35     | expr tSUB expr
   36     | expr tMUL expr
   37     | expr tDIV expr
   38     | tLPAR expr tRPAR
   39     | tADD expr
   40     | tSUB expr

   41 term: tID
   42     | tNB
   43     | funccall

   44 condition: expr
   45          | tNOT expr
   46          | expr tLT expr
   47          | expr tLE expr
   48          | expr tGT expr
   49          | expr tGE expr
   50          | expr tOR expr
   51          | expr tAND expr
   52          | expr tEQ expr
   53          | expr tNEQ expr

   54 $@7: ε

   55 $@8: ε

   56 loop: tWHILE $@7 tLPAR condition $@8 tRPAR block

   57 print: tPRINT tLPAR expr tRPAR

   58 assign: tID tASSIGN expr

   59 declar: tINT tID

   60 $@9: ε

   61 $@10: ε

   62 declar: tINT tID $@9 tASSIGN $@10 expr

   63 funcreturn: tRETURN expr

   64 $@11: ε

   65 funccall: tID tLPAR $@11 callparams tRPAR

   66 callparams: callparams_void
   67           | callparams_full

   68 callparams_void: ε

   69 callparams_full: expr
   70                | expr tCOMMA callparams_full


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tID <s> (258) 5 12 14 41 58 59 62 65
    tNB <i> (259) 42
    tIF <branch_info> (260) 29
    tWHILE <branch_info> (261) 56
    tELSE <branch_info> (262) 32
    tPRINT (263) 57
    tRETURN (264) 63
    tINT (265) 6 12 14 59 62
    tVOID (266) 7 11
    tLT (267) 46
    tLE (268) 47
    tGT (269) 48
    tGE (270) 49
    tEQ (271) 52
    tNEQ (272) 53
    tASSIGN (273) 58 62
    tADD (274) 34 39
    tSUB (275) 35 40
    tDIV (276) 37
    tMUL (277) 36
    tAND (278) 51
    tOR (279) 50
    tNOT (280) 45
    tLBRACE (281) 16
    tRBRACE (282) 16
    tLPAR (283) 5 29 38 56 57 65
    tRPAR (284) 5 29 38 56 57 65
    tSEMI (285) 19 20 21 22 23 27
    tCOMMA (286) 14 70


Non-terminaux, suivis des règles où ils apparaissent

    $accept (32)
        à gauche: 0
    functions (33)
        à gauche: 1 2
        à droite: 0 2
    function (34)
        à gauche: 5
        à droite: 2
    $@1 (35)
        à gauche: 3
        à droite: 5
    $@2 (36)
        à gauche: 4
        à droite: 5
    type <f_type> (37)
        à gauche: 6 7
        à droite: 5
    params (38)
        à gauche: 8 9
        à droite: 5
    params_void (39)
        à gauche: 10 11
        à droite: 8
    params_full (40)
        à gauche: 12 14
        à droite: 9 14
    $@3 (41)
        à gauche: 13
        à droite: 14
    block (42)
        à gauche: 16
        à droite: 5 26 29 32 56
    $@4 (43)
        à gauche: 15
        à droite: 16
    instructions (44)
        à gauche: 17 18
        à droite: 16 18
    instruction (45)
        à gauche: 19 20 21 22 23 24 25 26 27
        à droite: 18
    ifheader <branch_info> (46)
        à gauche: 29
        à droite: 30 32
    $@5 (47)
        à gauche: 28
        à droite: 29
    condins (48)
        à gauche: 30 32
        à droite: 25
    $@6 (49)
        à gauche: 31
        à droite: 32
    expr (50)
        à gauche: 33 34 35 36 37 38 39 40
        à droite: 34 35 36 37 38 39 40 44 45 46 47 48 49 50 51 52 53 57 58 62 63 69 70
    term (51)
        à gauche: 41 42 43
        à droite: 33
    condition <is_and> (52)
        à gauche: 44 45 46 47 48 49 50 51 52 53
        à droite: 29 56
    loop (53)
        à gauche: 56
        à droite: 24
    $@7 (54)
        à gauche: 54
        à droite: 56
    $@8 (55)
        à gauche: 55
        à droite: 56
    print (56)
        à gauche: 57
        à droite: 19
    assign (57)
        à gauche: 58
        à droite: 20
    declar (58)
        à gauche: 59 62
        à droite: 21
    $@9 (59)
        à gauche: 60
        à droite: 62
    $@10 (60)
        à gauche: 61
        à droite: 62
    funcreturn (61)
        à gauche: 63
        à droite: 22
    funccall (62)
        à gauche: 65
        à droite: 23 43
    $@11 (63)
        à gauche: 64
        à droite: 65
    callparams (64)
        à gauche: 66 67
        à droite: 65
    callparams_void (65)
        à gauche: 68
        à droite: 66
    callparams_full (66)
        à gauche: 69 70
        à droite: 67 70


État 0

    0 $accept: • functions $end

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 1 (functions)

    functions  aller à l'état 3
    function   aller à l'état 4
    type       aller à l'état 5


État 1

    6 type: tINT •

    $défaut  réduction par utilisation de la règle 6 (type)


État 2

    7 type: tVOID •

    $défaut  réduction par utilisation de la règle 7 (type)


État 3

    0 $accept: functions • $end

    $end  décalage et aller à l'état 6


État 4

    2 functions: function • functions

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 1 (functions)

    functions  aller à l'état 7
    function   aller à l'état 4
    type       aller à l'état 5


État 5

    5 function: type • tID tLPAR $@1 params tRPAR $@2 block

    tID  décalage et aller à l'état 8


État 6

    0 $accept: functions $end •

    $défaut  accepter


État 7

    2 functions: function functions •

    $défaut  réduction par utilisation de la règle 2 (functions)


État 8

    5 function: type tID • tLPAR $@1 params tRPAR $@2 block

    tLPAR  décalage et aller à l'état 9


État 9

    5 function: type tID tLPAR • $@1 params tRPAR $@2 block

    $défaut  réduction par utilisation de la règle 3 ($@1)

    $@1  aller à l'état 10


État 10

    5 function: type tID tLPAR $@1 • params tRPAR $@2 block

    tINT   décalage et aller à l'état 11
    tVOID  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 10 (params_void)

    params       aller à l'état 13
    params_void  aller à l'état 14
    params_full  aller à l'état 15


État 11

   12 params_full: tINT • tID
   14            | tINT • tID tCOMMA $@3 params_full

    tID  décalage et aller à l'état 16


État 12

   11 params_void: tVOID •

    $défaut  réduction par utilisation de la règle 11 (params_void)


État 13

    5 function: type tID tLPAR $@1 params • tRPAR $@2 block

    tRPAR  décalage et aller à l'état 17


État 14

    8 params: params_void •

    $défaut  réduction par utilisation de la règle 8 (params)


État 15

    9 params: params_full •

    $défaut  réduction par utilisation de la règle 9 (params)


État 16

   12 params_full: tINT tID •
   14            | tINT tID • tCOMMA $@3 params_full

    tCOMMA  décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 12 (params_full)


État 17

    5 function: type tID tLPAR $@1 params tRPAR • $@2 block

    $défaut  réduction par utilisation de la règle 4 ($@2)

    $@2  aller à l'état 19


État 18

   14 params_full: tINT tID tCOMMA • $@3 params_full

    $défaut  réduction par utilisation de la règle 13 ($@3)

    $@3  aller à l'état 20


État 19

    5 function: type tID tLPAR $@1 params tRPAR $@2 • block

    tLBRACE  décalage et aller à l'état 21

    block  aller à l'état 22


État 20

   14 params_full: tINT tID tCOMMA $@3 • params_full

    tINT  décalage et aller à l'état 11

    params_full  aller à l'état 23


État 21

   16 block: tLBRACE • $@4 instructions tRBRACE

    $défaut  réduction par utilisation de la règle 15 ($@4)

    $@4  aller à l'état 24


État 22

    5 function: type tID tLPAR $@1 params tRPAR $@2 block •

    $défaut  réduction par utilisation de la règle 5 (function)


État 23

   14 params_full: tINT tID tCOMMA $@3 params_full •

    $défaut  réduction par utilisation de la règle 14 (params_full)


État 24

   16 block: tLBRACE $@4 • instructions tRBRACE

    tID      décalage et aller à l'état 25
    tIF      décalage et aller à l'état 26
    tWHILE   décalage et aller à l'état 27
    tPRINT   décalage et aller à l'état 28
    tRETURN  décalage et aller à l'état 29
    tINT     décalage et aller à l'état 30
    tLBRACE  décalage et aller à l'état 21
    tSEMI    décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 17 (instructions)

    block         aller à l'état 32
    instructions  aller à l'état 33
    instruction   aller à l'état 34
    ifheader      aller à l'état 35
    condins       aller à l'état 36
    loop          aller à l'état 37
    print         aller à l'état 38
    assign        aller à l'état 39
    declar        aller à l'état 40
    funcreturn    aller à l'état 41
    funccall      aller à l'état 42


État 25

   58 assign: tID • tASSIGN expr
   65 funccall: tID • tLPAR $@11 callparams tRPAR

    tASSIGN  décalage et aller à l'état 43
    tLPAR    décalage et aller à l'état 44


État 26

   29 ifheader: tIF • tLPAR condition tRPAR $@5 block

    tLPAR  décalage et aller à l'état 45


État 27

   56 loop: tWHILE • $@7 tLPAR condition $@8 tRPAR block

    $défaut  réduction par utilisation de la règle 54 ($@7)

    $@7  aller à l'état 46


État 28

   57 print: tPRINT • tLPAR expr tRPAR

    tLPAR  décalage et aller à l'état 47


État 29

   63 funcreturn: tRETURN • expr

    tID    décalage et aller à l'état 48
    tNB    décalage et aller à l'état 49
    tADD   décalage et aller à l'état 50
    tSUB   décalage et aller à l'état 51
    tLPAR  décalage et aller à l'état 52

    expr      aller à l'état 53
    term      aller à l'état 54
    funccall  aller à l'état 55


État 30

   59 declar: tINT • tID
   62       | tINT • tID $@9 tASSIGN $@10 expr

    tID  décalage et aller à l'état 56


État 31

   27 instruction: tSEMI •

    $défaut  réduction par utilisation de la règle 27 (instruction)


État 32

   26 instruction: block •

    $défaut  réduction par utilisation de la règle 26 (instruction)


État 33

   16 block: tLBRACE $@4 instructions • tRBRACE

    tRBRACE  décalage et aller à l'état 57


État 34

   18 instructions: instruction • instructions

    tID      décalage et aller à l'état 25
    tIF      décalage et aller à l'état 26
    tWHILE   décalage et aller à l'état 27
    tPRINT   décalage et aller à l'état 28
    tRETURN  décalage et aller à l'état 29
    tINT     décalage et aller à l'état 30
    tLBRACE  décalage et aller à l'état 21
    tSEMI    décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 17 (instructions)

    block         aller à l'état 32
    instructions  aller à l'état 58
    instruction   aller à l'état 34
    ifheader      aller à l'état 35
    condins       aller à l'état 36
    loop          aller à l'état 37
    print         aller à l'état 38
    assign        aller à l'état 39
    declar        aller à l'état 40
    funcreturn    aller à l'état 41
    funccall      aller à l'état 42


État 35

   30 condins: ifheader •
   32        | ifheader • tELSE $@6 block

    tELSE  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 30 (condins)


État 36

   25 instruction: condins •

    $défaut  réduction par utilisation de la règle 25 (instruction)


État 37

   24 instruction: loop •

    $défaut  réduction par utilisation de la règle 24 (instruction)


État 38

   19 instruction: print • tSEMI

    tSEMI  décalage et aller à l'état 60


État 39

   20 instruction: assign • tSEMI

    tSEMI  décalage et aller à l'état 61


État 40

   21 instruction: declar • tSEMI

    tSEMI  décalage et aller à l'état 62


État 41

   22 instruction: funcreturn • tSEMI

    tSEMI  décalage et aller à l'état 63


État 42

   23 instruction: funccall • tSEMI

    tSEMI  décalage et aller à l'état 64


État 43

   58 assign: tID tASSIGN • expr

    tID    décalage et aller à l'état 48
    tNB    décalage et aller à l'état 49
    tADD   décalage et aller à l'état 50
    tSUB   décalage et aller à l'état 51
    tLPAR  décalage et aller à l'état 52

    expr      aller à l'état 65
    term      aller à l'état 54
    funccall  aller à l'état 55


État 44

   65 funccall: tID tLPAR • $@11 callparams tRPAR

    $défaut  réduction par utilisation de la règle 64 ($@11)

    $@11  aller à l'état 66


État 45

   29 ifheader: tIF tLPAR • condition tRPAR $@5 block

    tID    décalage et aller à l'état 48
    tNB    décalage et aller à l'état 49
    tADD   décalage et aller à l'état 50
    tSUB   décalage et aller à l'état 51
    tNOT   décalage et aller à l'état 67
    tLPAR  décalage et aller à l'état 52

    expr       aller à l'état 68
    term       aller à l'état 54
    condition  aller à l'état 69
    funccall   aller à l'état 55


État 46

   56 loop: tWHILE $@7 • tLPAR condition $@8 tRPAR block

    tLPAR  décalage et aller à l'état 70


État 47

   57 print: tPRINT tLPAR • expr tRPAR

    tID    décalage et aller à l'état 48
    tNB    décalage et aller à l'état 49
    tADD   décalage et aller à l'état 50
    tSUB   décalage et aller à l'état 51
    tLPAR  décalage et aller à l'état 52

    expr      aller à l'état 71
    term      aller à l'état 54
    funccall  aller à l'état 55


État 48

   41 term: tID •
   65 funccall: tID • tLPAR $@11 callparams tRPAR

    tLPAR  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 41 (term)


État 49

   42 term: tNB •

    $défaut  réduction par utilisation de la règle 42 (term)


État 50

   39 expr: tADD • expr

    tID    décalage et aller à l'état 48
    tNB    décalage et aller à l'état 49
    tADD   décalage et aller à l'état 50
    tSUB   décalage et aller à l'état 51
    tLPAR  décalage et aller à l'état 52

    expr      aller à l'état 72
    term      aller à l'état 54
    funccall  aller à l'état 55


État 51

   40 expr: tSUB • expr

    tID    décalage et aller à l'état 48
    tNB    décalage et aller à l'état 49
    tADD   décalage et aller à l'état 50
    tSUB   décalage et aller à l'état 51
    tLPAR  décalage et aller à l'état 52

    expr      aller à l'état 73
    term      aller à l'état 54
    funccall  aller à l'état 55


État 52

   38 expr: tLPAR • expr tRPAR

    tID    décalage et aller à l'état 48
    tNB    décalage et aller à l'état 49
    tADD   décalage et aller à l'état 50
    tSUB   décalage et aller à l'état 51
    tLPAR  décalage et aller à l'état 52

    expr      aller à l'état 74
    term      aller à l'état 54
    funccall  aller à l'état 55


État 53

   34 expr: expr • tADD expr
   35     | expr • tSUB expr
   36     | expr • tMUL expr
   37     | expr • tDIV expr
   63 funcreturn: tRETURN expr •

    tADD  décalage et aller à l'état 75
    tSUB  décalage et aller à l'état 76
    tDIV  décalage et aller à l'état 77
    tMUL  décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 63 (funcreturn)


État 54

   33 expr: term •

    $défaut  réduction par utilisation de la règle 33 (expr)


État 55

   43 term: funccall •

    $défaut  réduction par utilisation de la règle 43 (term)


État 56

   59 declar: tINT tID •
   62       | tINT tID • $@9 tASSIGN $@10 expr

    tASSIGN  réduction par utilisation de la règle 60 ($@9)
    $défaut  réduction par utilisation de la règle 59 (declar)

    $@9  aller à l'état 79


État 57

   16 block: tLBRACE $@4 instructions tRBRACE •

    $défaut  réduction par utilisation de la règle 16 (block)


État 58

   18 instructions: instruction instructions •

    $défaut  réduction par utilisation de la règle 18 (instructions)


État 59

   32 condins: ifheader tELSE • $@6 block

    $défaut  réduction par utilisation de la règle 31 ($@6)

    $@6  aller à l'état 80


État 60

   19 instruction: print tSEMI •

    $défaut  réduction par utilisation de la règle 19 (instruction)


État 61

   20 instruction: assign tSEMI •

    $défaut  réduction par utilisation de la règle 20 (instruction)


État 62

   21 instruction: declar tSEMI •

    $défaut  réduction par utilisation de la règle 21 (instruction)


État 63

   22 instruction: funcreturn tSEMI •

    $défaut  réduction par utilisation de la règle 22 (instruction)


État 64

   23 instruction: funccall tSEMI •

    $défaut  réduction par utilisation de la règle 23 (instruction)


État 65

   34 expr: expr • tADD expr
   35     | expr • tSUB expr
   36     | expr • tMUL expr
   37     | expr • tDIV expr
   58 assign: tID tASSIGN expr •

    tADD  décalage et aller à l'état 75
    tSUB  décalage et aller à l'état 76
    tDIV  décalage et aller à l'état 77
    tMUL  décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 58 (assign)


État 66

   65 funccall: tID tLPAR $@11 • callparams tRPAR

    tID    décalage et aller à l'état 48
    tNB    décalage et aller à l'état 49
    tADD   décalage et aller à l'état 50
    tSUB   décalage et aller à l'état 51
    tLPAR  décalage et aller à l'état 52

    $défaut  réduction par utilisation de la règle 68 (callparams_void)

    expr             aller à l'état 81
    term             aller à l'état 54
    funccall         aller à l'état 55
    callparams       aller à l'état 82
    callparams_void  aller à l'état 83
    callparams_full  aller à l'état 84


État 67

   45 condition: tNOT • expr

    tID    décalage et aller à l'état 48
    tNB    décalage et aller à l'état 49
    tADD   décalage et aller à l'état 50
    tSUB   décalage et aller à l'état 51
    tLPAR  décalage et aller à l'état 52

    expr      aller à l'état 85
    term      aller à l'état 54
    funccall  aller à l'état 55


État 68

   34 expr: expr • tADD expr
   35     | expr • tSUB expr
   36     | expr • tMUL expr
   37     | expr • tDIV expr
   44 condition: expr •
   46          | expr • tLT expr
   47          | expr • tLE expr
   48          | expr • tGT expr
   49          | expr • tGE expr
   50          | expr • tOR expr
   51          | expr • tAND expr
   52          | expr • tEQ expr
   53          | expr • tNEQ expr

    tLT   décalage et aller à l'état 86
    tLE   décalage et aller à l'état 87
    tGT   décalage et aller à l'état 88
    tGE   décalage et aller à l'état 89
    tEQ   décalage et aller à l'état 90
    tNEQ  décalage et aller à l'état 91
    tADD  décalage et aller à l'état 75
    tSUB  décalage et aller à l'état 76
    tDIV  décalage et aller à l'état 77
    tMUL  décalage et aller à l'état 78
    tAND  décalage et aller à l'état 92
    tOR   décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 44 (condition)


État 69

   29 ifheader: tIF tLPAR condition • tRPAR $@5 block

    tRPAR  décalage et aller à l'état 94


État 70

   56 loop: tWHILE $@7 tLPAR • condition $@8 tRPAR block
